Fix: Standardize blog breadcrumb spacing

--- a/src/app/[lang]/blog/page.module.css
+++ b/src/app/[lang]/blog/page.module.css
@@ -31,7 +31,7 @@
 }
 
 .page {
-    padding: 4rem 0;
+    padding-bottom: 4rem;
 }
 
 .layoutGrid {
